added redirect by match name

--- a/force-app/main/default/lwc/match/match.html
+++ b/force-app/main/default/lwc/match/match.html
@@ -84,7 +84,7 @@
                     
 
                        <td role="gridcell" class="matchNameRow">
-                          <div  class="slds-truncate"><a href="https://races-assessment-dev-ed.lightning.force.com/lightning/r/Match__c/a002v000044MzobAAC/view" target="_blank">{match.Name}</a></div>
+                          <div  class="slds-truncate"><a href="#" target="_blank" onclick={redirectToDetail} data-id={match.Id}>{match.Name}</a></div>
                          </td>
 
                         
