--- a/force-app/main/default/lwc/match/match.html
+++ b/force-app/main/default/lwc/match/match.html
@@ -20,15 +20,26 @@
     </div>
 
     <!--DATA TABLE-->
+    <!--SPINNER-->
+    <template if:true={isLoading}><div class="demo-only" style="height:6rem">
+        <div class="slds-spinner_container">
+          <div role="status" class="slds-spinner slds-spinner_medium slds-spinner_brand">
+            <span class="slds-assistive-text">Loading</span>
+            <div class="slds-spinner__dot-a"></div>
+            <div class="slds-spinner__dot-b"></div>
+          </div>
+        </div>
+      </div></template>
+    <template if:false={isLoading}>
     <table aria-multiselectable="true" class="slds-table slds-table_cell-buffer slds-table_bordered"> 
       <!--TABLE HEAD-->
-        <thead >
-          
+      <template if:true={currentMathces}>
+      <thead >       
             <tr class="slds-line-height_reset">
                 <th class="slds-text-align_right" scope="col" style="width:3.25rem">
                     <div class="slds-th__action slds-th__action_form">
                       <div class="slds-checkbox">
-                        <input type="checkbox" name="options" class="checkAll" id="checkbox-885" value="checkbox-885" tabindex="0" aria-labelledby="check-select-all-label column-group-header" />
+                        <input type="checkbox" name="options" class="checkAll" id="checkbox-885" value="checkbox-885" onclick={getValueCheckbox} />
                         <label class="slds-checkbox__label" for="checkbox-885">
                           <span class="slds-checkbox_faux"></span>
                         </label>
@@ -68,6 +79,7 @@
                      </th>
               </tr>                
          </thead>
+        </template>
 
 <!--TABLE BODY-->
         <tbody>  
@@ -75,7 +87,7 @@
                 <tr key={match.Id} class="slds-hint-parent">
                     <td class="slds-text-align_right" role="gridcell">
                         <div class="slds-checkbox">
-                          <input type="checkbox" class="selectMatchByRow" onclick={getValueCheckbox} id={id} value={match.Id} />
+                          <input type="checkbox" class="selectMatchByRow" onclick={blockPagination} id={id} value={match.Id} />
                           <label class="slds-checkbox__label" for={id}>
                             <span class="slds-checkbox_faux"></span>
                           </label>
@@ -108,9 +120,11 @@
               </template>    
         </tbody>     
     </table>
+ 
   
     <p class="slds-m-vertical_medium content">Total records: <b>{totalrecords} </b> Page <b>{currentpage}</b> of  
       <b> {totalpages}</b></p> 
-                     
-    </section>   
+    </template>             
+    </section> 
+   
 </template>
