added pubsub instead custom event

--- a/force-app/main/default/lwc/match/match.html
+++ b/force-app/main/default/lwc/match/match.html
@@ -119,9 +119,9 @@
                   </tbody>     
             </table>
  
-  
-    <p class="slds-m-vertical_medium content">Total records: <b>{totalrecords} </b> Page <b>{currentpage}</b> of  
-      <b> {totalpages}</b></p> 
+   
+    <p class="slds-m-vertical_medium content"> Total records: <b>{totalrecords}</b> Page <b>{currentpage}</b> of  
+      <b> {totalpage} </b></p> 
     </template>             
     </section> 
    
