change listOfRegistration html and js files AB

--- a/force-app/main/default/lwc/listOfAllRegistrations/listOfAllRegistrations.html
+++ b/force-app/main/default/lwc/listOfAllRegistrations/listOfAllRegistrations.html
@@ -2,7 +2,7 @@
     <div class="main-div-container">
         <lightning-card>
             <h3 slot="title">
-                <lightning-avatar class="registration-creatures" src="https://artembubnov-dev-ed--c.visualforce.com/resource/1559566709000/MagicalCreatures?" size="large" alternative-text="regestration-wizzard-img"></lightning-avatar>
+                <lightning-avatar class="registration-creatures" src="https://races-assessment-dev-ed--c.visualforce.com/resource/1560786202000/MagicalCreatures?" size="large" alternative-text="regestration-wizzard-img"></lightning-avatar>
                 Registrations
             </h3>
 
