change registration html and js files AB

--- a/force-app/main/default/lwc/registration/registration.html
+++ b/force-app/main/default/lwc/registration/registration.html
@@ -3,7 +3,7 @@
         <div class="a-container">
             <lightning-layout>
                 <lightning-layout-item >
-                    <lightning-avatar class="registration-wizzard" src="https://artembubnov-dev-ed--c.visualforce.com/resource/1558515787000/RegistrationWizzard" size="large" alternative-text="regestration-wizzard-img"></lightning-avatar>
+                    <lightning-avatar class="registration-wizzard" src="https://races-assessment-dev-ed--c.visualforce.com/resource/1560786082000/RegistrationWizzard?" size="large" alternative-text="regestration-wizzard-img"></lightning-avatar>
                 </lightning-layout-item>
 
                 <lightning-layout-item>
@@ -41,7 +41,6 @@
                 <lightning-layout-item padding="around-small">
                     <lightning-input    name="inpunRegName" 
                                         value={prefilledNickName}
-                                        onfocus={inputCleaner}
                                         onblur={nickNameValidator}
                                         ></lightning-input>
                         
